# ft_printf

./: CMakeLists.txt  Makefile  a.out  all_for_flags.c  bonus.c  else.c  for_bc.c  for_bs.c  for_print.c  ft_it_base.c  ft_printf.c  ft_printf.h  main.c  tp_f.c  tp_s.c  wid_prec.c
libft/: Makefile  ft_itoa_base.c  ft_itoa_base.c~  libft.h
